force-app/main/default/objects/Knowledge__kav/fields/Coupon__c.field-meta.xml
<CustomField>
    <fullName>Coupon__c</fullName>
    <label>Coupon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>