force-app/main/default/objects/Knowledge__kav/fields/Coupon_Released_By__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Released_By__c</fullName>
    <label>Coupon Released By</label>
    <type>TextArea</type>
</CustomField>