force-app/main/default/objects/Knowledge__kav/fields/E_Mail_Scripts__c.field-meta.xml
<CustomField>
    <fullName>E_Mail_Scripts__c</fullName>
    <label>E-Mail Scripts</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>