force-app/main/default/objects/Knowledge__kav/fields/Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Eligibility__c</fullName>
    <label>Eligibility</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>