force-app/main/default/objects/Knowledge__kav/fields/How_to_Available__c.field-meta.xml
<CustomField>
    <fullName>How_to_Available__c</fullName>
    <label>How to Available</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>