force-app/main/default/objects/Knowledge__kav/fields/Important_Note__c.field-meta.xml
<CustomField>
    <fullName>Important_Note__c</fullName>
    <label>Important Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>