force-app/main/default/objects/Knowledge__kav/fields/Offer_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Offer_Benefits__c</fullName>
    <label>Offer Benefits</label>
    <type>TextArea</type>
</CustomField>