force-app/main/default/objects/Knowledge__kav/fields/Offer_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Offer_Start_Date__c</fullName>
    <description>used for kult</description>
    <label>Offer Start Date</label>
    <type>Date</type>
</CustomField>