force-app/main/default/objects/Knowledge__kav/fields/Step_By_Step_Procedure__c.field-meta.xml
<CustomField>
    <fullName>Step_By_Step_Procedure__c</fullName>
    <label>Step By Step Procedure</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>