force-app/main/default/objects/Knowledge__kav/fields/Steps_to_Follow_CS__c.field-meta.xml
<CustomField>
    <fullName>Steps_to_Follow_CS__c</fullName>
    <label>Steps to Follow-CS</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>