force-app/main/default/objects/Knowledge__kav/recordTypes/E_mail_Scripts_Layout.recordType-meta.xml
<RecordType>
    <fullName>E_mail_Scripts_Layout</fullName>
    <active>true</active>
    <label>E-mail Scripts Layout</label>
</RecordType>