force-app/main/default/objects/Knowledge__kav/recordTypes/FAQ_Layout.recordType-meta.xml
<RecordType>
    <fullName>FAQ_Layout</fullName>
    <active>true</active>
    <label>FAQ Layout</label>
</RecordType>