force-app/main/default/objects/Knowledge__kav/recordTypes/Manual_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Manual_Record_Type</fullName>
    <active>true</active>
    <label>Manual Record Type</label>
</RecordType>