force-app/main/default/objects/Knowledge__kav/recordTypes/Offer_Layout.recordType-meta.xml
<RecordType>
    <fullName>Offer_Layout</fullName>
    <active>true</active>
    <label>Offer Layout</label>
</RecordType>